# fei-modelzoo

./: .stylish-haskell.yaml  LICENSE  README.md  fei-modelzoo.cabal  stack.yaml
src/MXNet/NN/ModelZoo/: LambdaLayer.hs  Lenet.hs  Resnet.hs  Resnext.hs  VGG.hs
src/MXNet/NN/ModelZoo/RCNN/: FPN.hs  FasterRCNN.hs  MaskRCNN.hs  ProposalTarget.hs  RCNN.hs
src/MXNet/NN/ModelZoo/Utils/: Box.hs  Repa.hs
