cabal-version:              2.4
name:                       fei-modelzoo
version:                    1.1.0
synopsis:                   A collection of standard models
description:                A collection of standard models
homepage:                   http://github.com/pierric/fei-modelzoo
license:                    BSD-3-Clause
license-file:               LICENSE
author:                     Jiasen Wu
maintainer:                 jiasenwu@hotmail.com
copyright:                  2020 - Jiasen Wu
category:                   Machine Learning, AI
build-type:                 Simple

Library
    exposed-modules:        MXNet.NN.ModelZoo.Lenet
                            MXNet.NN.ModelZoo.VGG
                            MXNet.NN.ModelZoo.Resnet
                            MXNet.NN.ModelZoo.Resnext
                            MXNet.NN.ModelZoo.RCNN.FPN
                            MXNet.NN.ModelZoo.RCNN.RCNN
                            MXNet.NN.ModelZoo.RCNN.MaskRCNN
                            MXNet.NN.ModelZoo.RCNN.FasterRCNN
    hs-source-dirs:         src
    ghc-options:            -Wall
    default-language:       Haskell2010
    default-extensions:     GADTs,
                            TypeFamilies,
                            OverloadedLabels,
                            OverloadedStrings,
                            OverloadedLists,
                            FlexibleContexts,
                            FlexibleInstances,
                            StandaloneDeriving,
                            RecordWildCards,
                            DataKinds,
                            TypeOperators,
                            TypeApplications,
                            PartialTypeSignatures,
                            LambdaCase,
                            MultiWayIf,
                            DoAndIfThenElse,
                            TemplateHaskell,
                            NoImplicitPrelude
    build-depends:          base >= 4.7 && < 5.0
                          , lens
                          , transformers-base
                          , lens
                          , random-fu
                          , vector
                          , text
                          , rio
                          , formatting
                          , attoparsec
                          , constraints
                          , fei-base >= 2.0.0
                          , fei-nn >= 2.0.0
                          , fei-einops >= 0.1.0
